# examples/server/chi/same-pkg-mult-files/api/adapter.go
@@ -52,7 +52,7 @@ type ServiceInterface interface {
 	ListProducts(ctx context.Context, opts *ListProductsServiceRequestOptions) (*ListProductsResponseData, error)
 	// GetCategory Get a category by ID (integer path param)
 	GetCategory(ctx context.Context, opts *GetCategoryServiceRequestOptions) (*GetCategoryResponseData, error)
-	// GetItemsByStatus Get items by active status and rating (boolean + number path params)
+	// GetItemsByStatus Get items by type and rating (string + number path params)
 	GetItemsByStatus(ctx context.Context, opts *GetItemsByStatusServiceRequestOptions) (*GetItemsByStatusResponseData, error)
 	// GetUserPost Get a specific post by a user
 	GetUserPost(ctx context.Context, opts *GetUserPostServiceRequestOptions) (*GetUserPostResponseData, error)
@@ -1298,7 +1298,7 @@ func (a *HTTPAdapter) GetCategory(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// GetItemsByStatus handles GET /items/{active}/{rating}
+// GetItemsByStatus handles GET /items/{type}/{rating}
 func (a *HTTPAdapter) GetItemsByStatus(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	opts := &GetItemsByStatusServiceRequestOptions{}
@@ -1306,13 +1306,8 @@ func (a *HTTPAdapter) GetItemsByStatus(w http.ResponseWriter, r *http.Request) {
 
 	// Parse path parameters
 	pathParams := &GetItemsByStatusPath{}
-	pathParamActiveStr := chi.URLParam(r, "active")
-
-	pathParamActive, err := runtime.ParseString[bool](pathParamActiveStr)
-	if returnParseError(w, "active", err) {
-		return
-	}
-	pathParams.Active = pathParamActive
+	pathParamTypeStr := chi.URLParam(r, "type")
+	pathParams.Type = pathParamTypeStr
 	pathParamRatingStr := chi.URLParam(r, "rating")
 
 	pathParamRating, err := runtime.ParseString[float32](pathParamRatingStr)
@@ -1369,7 +1364,7 @@ func (a *HTTPAdapter) GetItemsByStatus(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// GetUserPost handles GET /users/{userId}/posts/{postId}
+// GetUserPost handles GET /users/{id}/posts/{postId}
 func (a *HTTPAdapter) GetUserPost(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	opts := &GetUserPostServiceRequestOptions{}
@@ -1377,8 +1372,8 @@ func (a *HTTPAdapter) GetUserPost(w http.ResponseWriter, r *http.Request) {
 
 	// Parse path parameters
 	pathParams := &GetUserPostPath{}
-	pathParamUserIDStr := chi.URLParam(r, "userId")
-	pathParams.UserID = pathParamUserIDStr
+	pathParamIDStr := chi.URLParam(r, "id")
+	pathParams.ID = pathParamIDStr
 	pathParamPostIDStr := chi.URLParam(r, "postId")
 	pathParams.PostID = pathParamPostIDStr
 	opts.PathParams = pathParams
